--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           por entes públicos e privados <br />
           Pode ser incremental (manter a essência e integridade de um sistema)
           ou transformadora (alterar os atributos fundamentais de um sistema)
-          <br/>
+          <br />
 
           <b>Necessidade de adaptação:</b>
           A necessidade de adaptação varia de lugar para lugar, dependendo da
@@ -184,26 +184,130 @@
           <h3>Mitigação e soluções para o aquecimento global:</h3>
           A mitigação do aquecimento global é a redução das emissões de gases de
           efeito estufa (GEE). Para isso, é possível adotar medidas individuais
-          e coletivas, como: <br/>
-         <b>Priorizar energias renováveis:</b>
-         Optar por fontes de energia limpa, como solar, eólica, hidrelétrica e biomassa. <br>
-         <b>Reduzir o consumo de combustíveis fósseis:</b>
-         Evitar o uso de derivados do petróleo e da gasolina <br>
-         <b>Melhorar a eficiência energética:</b>
-         Reduzir o desperdício de energia em casa, no trabalho e nas indústrias <br>
-         <b>Promover o transporte público:</b>
-         Optar pelo transporte coletivo, como trem e carro compartilhado, em vez de usar o carro particular <br>
-         <b>Consumir produtos locais:</b>
-         Optar por produtos que não precisam ser transportados longas distâncias  <br>
-         <b>Produzir menos lixo:</b>
-         Evitar comprar produtos com muitas embalagens e reciclar o que for possível <br>
-         <b>Reflorestar e restaurar ecossistemas:</b>
-         Plantar árvores e algas, que absorvem parte do CO2 emitido  <br>
-         <b>Destinar corretamente os resíduos orgânicos:</b>
-         Separar os resíduos orgânicos para que sejam transformados em adubo <br>
-
-
-
+          e coletivas, como: <br />
+          <b>Priorizar energias renováveis:</b>
+          Optar por fontes de energia limpa, como solar, eólica, hidrelétrica e
+          biomassa. <br />
+          <b>Reduzir o consumo de combustíveis fósseis:</b>
+          Evitar o uso de derivados do petróleo e da gasolina <br />
+          <b>Melhorar a eficiência energética:</b>
+          Reduzir o desperdício de energia em casa, no trabalho e nas indústrias
+          <br />
+          <b>Promover o transporte público:</b>
+          Optar pelo transporte coletivo, como trem e carro compartilhado, em
+          vez de usar o carro particular <br />
+          <b>Consumir produtos locais:</b>
+          Optar por produtos que não precisam ser transportados longas
+          distâncias <br />
+          <b>Produzir menos lixo:</b>
+          Evitar comprar produtos com muitas embalagens e reciclar o que for
+          possível <br />
+          <b>Reflorestar e restaurar ecossistemas:</b>
+          Plantar árvores e algas, que absorvem parte do CO2 emitido <br />
+          <b>Destinar corretamente os resíduos orgânicos:</b>
+          Separar os resíduos orgânicos para que sejam transformados em adubo
+          <br />
+        </li>
+        <li>
+          <b>O que é o Aquecimento Global ?</b> <br />
+          O aquecimento global refere-se ao aumento gradual da temperatura média
+          da Terra, causado principalmente pela emissão de gases de efeito
+          estufa, como dióxido de carbono (CO₂), metano (CH₄) e óxidos de
+          nitrogênio, resultantes da atividade humana, como queima de
+          combustíveis fósseis, desmatamento e agricultura intensiva. Esse
+          fenômeno altera os padrões climáticos, causando mudanças no clima,
+          como aumento da frequência de eventos climáticos extremos
+          (tempestades, secas, ondas de calor), derretimento das calotas
+          polares, elevação do nível do mar e impactos significativos em
+          ecossistemas e biodiversidade. O aquecimento global representa uma
+          ameaça à segurança alimentar, à saúde e ao equilíbrio natural do
+          planeta. Para mitigar seus efeitos, é essencial adotar políticas de
+          redução de emissões, promover fontes de energia renováveis e adotar
+          práticas mais sustentáveis em nível global.
+        </li>
+        <li>
+          Existem várias formas de mitigar o aquecimento global no dia a dia, e
+          cada pequena ação conta para reduzir o impacto ambiental. Aqui estão
+          algumas práticas que podemos adotar no cotidiano:
+        </li>
+        <li>
+          <b>1.Reduzir o consumo de energia</b> <br />
+          Desligue aparelhos eletrônicos quando não estiverem em uso. Isso
+          inclui TVs, luzes, carregadores e outros dispositivos. <br />
+          Troque lâmpadas incandescentes por lâmpadas de LED, que consomem menos
+          energia. <br />
+          Utilize aparelhos eficientes energeticamente, como eletrodomésticos
+          com selo Procel ou Energy Star. <br />
+          <b>2.Optar por transporte sustentável</b> <br />
+          Ande de bicicleta ou caminhe sempre que possível, reduzindo a
+          necessidade de transporte motorizado. <br />
+          Escolha carros híbridos ou elétricos, que emitem menos gases
+          poluentes. <br />
+          <b> 3.Reduzir, reutilizar e reciclar</b> <br />
+          Reduza o uso de plásticos descartáveis, optando por itens
+          reutilizáveis como garrafas e sacolas. <br />
+          Recicle materiais como papel, vidro, metal e plástico para diminuir a
+          quantidade de resíduos enviados aos aterros. <br />
+          Compre produtos duráveis e evite o consumo excessivo de bens de curto
+          prazo. <br />
+          <b>4.Optar por uma alimentação mais sustentável</b> <br />
+          Reduza o consumo de carne e produtos de origem animal, já que a
+          produção desses alimentos gera grandes quantidades de gases de efeito
+          estufa. <br />
+          Consuma alimentos locais e sazonais, o que reduz as emissões
+          associadas ao transporte de alimentos de longa distância. <br />
+          Evite desperdício de alimentos, planejando melhor as compras e as
+          refeições. <br />
+          <b>5.Apoiar energias renováveis</b> <br />
+          Se possível, instale painéis solares ou considere a opção de energia
+          renovável em sua residência ou empresa. <br />
+          Apoie políticas e empresas que investem em fontes de energia limpas,
+          como solar, eólica e hidrelétrica. <br />
+          <b>6.Plante árvores e cuide das plantas</b> <br />
+          Plante árvores e incentive o reflorestamento. As árvores absorvem CO₂
+          e ajudam a melhorar a qualidade do ar. <br />
+          Mantenha jardins e espaços verdes, que também contribuem para a
+          absorção de carbono e o equilíbrio ecológico. <br />
+          <b>7.Consumo consciente de água</b> <br />
+          Reduza o consumo de água ao tomar banhos mais curtos e usar torneiras
+          e chuveiros mais eficientes. <br />
+          Evite o desperdício de alimentos e água, priorizando a
+          sustentabilidade em seu dia a dia. <br />
+          <b>8.Educar e sensibilizar outros</b> <br />
+          Compartilhe informações sobre a importância da sustentabilidade e do
+          combate ao aquecimento global. <br />
+          Participe de ações comunitárias, como mutirões de limpeza, eventos
+          educativos e movimentos pela preservação ambiental. <br />
+       
+        </li>
+        <li>   <b>"O calor da Terra: A luta contra o aquecimento global"</b> </li>
+        <li>
+          O aquecimento global é uma chama silenciosa que arde no coração do
+          nosso planeta. Não podemos vê-la com os olhos, mas a sentimos no ar,
+          na água, na terra que já não é mais a mesma. O clima, antes previsível
+          e estável, agora dança ao ritmo de um caos que só nós, humanos,
+          conseguimos orquestrar. As estações do ano não são mais como antes. O
+          verão se arrasta mais quente, o inverno, mais frio e imprevisível. As
+          secas parecem nunca terminar, enquanto as chuvas, quando vêm, carregam
+          tudo que encontram pela frente.
+        </li>
+        <li>
+          A Terra está nos enviando sinais, mas estamos tão distraídos com
+          nossas vidas cotidianas que talvez não os vejamos com clareza.
+          Glaciares derretendo, florestas queimando, ventos cada vez mais
+          fortes... Cada um desses fenômenos é um grito da natureza pedindo
+          socorro. E, no entanto, muitas vezes preferimos olhar para o outro
+          lado, como se fosse mais fácil ignorar do que agir.
+        </li>
+        <li>
+          Mas ainda há tempo. A chama não precisa se espalhar de maneira
+          irreversível. Podemos mudar nosso caminho. Cada escolha que fazemos—do
+          transporte que usamos ao que consumimos—pode ser um passo em direção à
+          cura. O aquecimento global não é um problema de amanhã, é um desafio
+          de hoje. E cabe a nós decidir se seremos lembrados como os heróis que
+          salvaram a Terra ou como aqueles que viraram as costas para um futuro
+          que poderia ter sido melhor. O futuro está nas nossas mãos, e é hora
+          de agir antes que a chama se torne fogo.
         </li>
       </ul>
     </main>
